--- a/LAB-1Index.html
+++ b/LAB-1Index.html
@@ -10,7 +10,7 @@
 	<a target="_blank" href="Objective.html">Objective</a>
 	<a target="_blank" href="Education.html">Education</a>
 	<a target="_blank" href="PersionalInfo.html">Persional Information</a>
-	<a target="_blank" href="https://github.com/mdshamimshakil325/WT_MID_SUM21">Github </a>
+	<a target="_blank" href="https://https://github.com/Ishrak08/WT_MID_SUM21">Github </a>
 	<a target="_blank" href="Reference.html">Reference</a>
 	</b>
 	
